<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infomation_info"
            android:layout_gravity="center"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_info"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_marginBottom="60dp"/>

        <EditText
            android:id="@+id/request_MSSV"
            android:background="@drawable/edittext_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mssv"
            android:drawableLeft="@drawable/ic_edit_text_search"
            android:drawablePadding="7dp"/>

        <Button
            android:id="@+id/request_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</RelativeLayout>
