<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    style="@style/TableLayoutBorder">

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp">
        <TextView
            style="@style/TextViewLightGreen_800"
            android:text="@string/subject_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            style="@style/TextViewLightGreen_800"
            android:text="@string/subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightGreen_200"
            android:id="@+id/schedule_mamh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            style="@style/TextViewLightGreen_200"
            android:id="@+id/schedule_tenmh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightGreen_800"
            android:text="@string/credit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            style="@style/TextViewLightGreen_800"
            android:text="@string/credit_free"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightGreen_200"
            android:id="@+id/schedule_tinchi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            style="@style/TextViewLightGreen_200"
            android:id="@+id/schedule_tinchihoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightGreen_800"
            android:text="@string/group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightGreen_200"
            android:id="@+id/schedule_nhom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightGreen_800"
            android:text="@string/weekday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewLightGreen_800"
            android:text="@string/session"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewLightGreen_800"
            android:text="@string/room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightGreen_200"
            android:id="@+id/schedule_thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewLightGreen_200"
            android:id="@+id/schedule_tiet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewLightGreen_200"
            android:id="@+id/schedule_phong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightGreen_800"
            android:text="@string/week"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp">
        <TextView
            style="@style/TextViewLightGreen_200"
            android:id="@+id/schedule_tuanhoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

</TableLayout>