<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    style="@style/TableLayoutBorder">

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp">
        <TextView
            style="@style/TextViewLightBlue_800"
            android:text="@string/subject_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            style="@style/TextViewLightBlue_800"
            android:text="@string/subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightBlue_200"
            android:id="@+id/test_point_mamh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            style="@style/TextViewLightBlue_200"
            android:id="@+id/test_point_tenmh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightBlue_800"
            android:text="@string/group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            style="@style/TextViewLightBlue_800"
            android:text="@string/credits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightBlue_200"
            android:id="@+id/test_point_nhom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            style="@style/TextViewLightBlue_200"
            android:id="@+id/test_point_tinchi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightBlue_800"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightBlue_200"
            android:text="@string/point"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewLightBlue_800"
            android:text="@string/midterm_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewLightBlue_800"
            android:text="@string/final_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewLightBlue_800"
            android:text="@string/final_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp">
        <TextView
            style="@style/TextViewLightBlue_200"
            android:id="@+id/test_point_kiemtra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewLightBlue_200"
            android:id="@+id/test_point_thi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewLightBlue_200"
            android:id="@+id/test_point_tongket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

</TableLayout>