<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_centerHorizontal="true"
          android:layout_centerVertical="true"
          android:layout_marginLeft="40dp"
          android:layout_marginRight="40dp">

          <ImageView
              android:layout_width="150dp"
              android:layout_height="150dp"
              android:background="@drawable/logo"
              android:layout_gravity="center"
              android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infomation_info"
                android:layout_gravity="center"
                android:textSize="30sp"
                />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/student_info"
              android:layout_gravity="center"
              android:textSize="30sp"
              android:layout_marginBottom="20dp"
              />

            <Button
                android:id="@+id/home_page_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_page_schedule"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />

            <Button
                android:id="@+id/home_page_test_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_page_test_schedule"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />

            <Button
                android:id="@+id/home_page_test_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_page_test_point"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="5dp"
                />

          <ImageButton
              android:id="@+id/home_page_helper"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/ic_helper"
              android:layout_gravity="center"/>

      </LinearLayout>



</RelativeLayout>