<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    style="@style/TableLayoutBorder">

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp">
        <TextView
            style="@style/TextViewOrange_800"
            android:text="@string/subject_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            style="@style/TextViewOrange_800"
            android:text="@string/subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewOrange_200"
            android:id="@+id/test_schedule_mamh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            style="@style/TextViewOrange_200"
            android:id="@+id/test_schedule_tenmh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewOrange_800"
            android:text="@string/group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewOrange_200"
            android:id="@+id/test_schedule_nhom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewOrange_800"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewOrange_200"
            android:text="@string/test_schedule_midterm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewOrange_800"
            android:text="@string/day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewOrange_800"
            android:text="@string/hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewOrange_800"
            android:text="@string/room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewOrange_200"
            android:id="@+id/test_schedule_midterm_ngay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewOrange_200"
            android:id="@+id/test_schedule_midterm_gio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewOrange_200"
            android:id="@+id/test_schedule_midterm_phong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewOrange_800"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewOrange_200"
            android:text="@string/test_schedule_final"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            style="@style/TextViewOrange_800"
            android:text="@string/day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewOrange_800"
            android:text="@string/hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewOrange_800"
            android:text="@string/room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp">
        <TextView
            style="@style/TextViewOrange_200"
            android:id="@+id/test_schedule_final_ngay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewOrange_200"
            android:id="@+id/test_schedule_final_gio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextViewOrange_200"
            android:id="@+id/test_schedule_final_phong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </TableRow>

</TableLayout>